@@ -1,3 +1,8 @@
+(18/04/15)
+==========
+
+· Added Emus > Picodrive & Caprice for Raspberry Pi 2 (Amstrad emulator)
+
 (17/04/15)
 ==========
 
